Add html into app.js, create VideosNav component

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
         </div>
       </div>
     </form>
+    <!-- Comments List -->
     <ul class="comments__list">
-      <!-- Template -->
       <li class="comments__item">
         <div class="comments__content">
           <div class="comments__avatar">
@@ -113,6 +113,94 @@
               odit. Cumque magni dolor consectetur deleniti?
             </p>
           </div>
+        </div>
+      </li>
+      <li class="comments__item">
+        <div class="comments__content">
+          <div class="comments__avatar">
+            <div class="avatar"></div>
+          </div>
+          <div class="comments__info">
+            <div class="comments__info_wrapper">
+              <p class="comments__info__name">Michael</p>
+              <p class="comments__info__date">08/09/2021</p>
+            </div>
+            <p class="comments__info__text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum
+              voluptatum praesentium a molestiae dolorum expedita rem, natus
+              molestias et beatae consectetur consequatur recusandae quibusdam
+              odit. Cumque magni dolor consectetur deleniti?
+            </p>
+          </div>
+        </div>
+      </li>
+      <li class="comments__item">
+        <div class="comments__content">
+          <div class="comments__avatar">
+            <div class="avatar"></div>
+          </div>
+          <div class="comments__info">
+            <div class="comments__info_wrapper">
+              <p class="comments__info__name">Michael</p>
+              <p class="comments__info__date">08/09/2021</p>
+            </div>
+            <p class="comments__info__text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum
+              voluptatum praesentium a molestiae dolorum expedita rem, natus
+              molestias et beatae consectetur consequatur recusandae quibusdam
+              odit. Cumque magni dolor consectetur deleniti?
+            </p>
+          </div>
+        </div>
+      </li>
+      <li class="comments__item">
+        <div class="comments__content">
+          <div class="comments__avatar">
+            <div class="avatar"></div>
+          </div>
+          <div class="comments__info">
+            <div class="comments__info_wrapper">
+              <p class="comments__info__name">Michael</p>
+              <p class="comments__info__date">08/09/2021</p>
+            </div>
+            <p class="comments__info__text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum
+              voluptatum praesentium a molestiae dolorum expedita rem, natus
+              molestias et beatae consectetur consequatur recusandae quibusdam
+              odit. Cumque magni dolor consectetur deleniti?
+            </p>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <!-- Videos List -->
+    <ul class="videos__list">
+      <li class="videos__item">
+        <video class="videos__source" src="#"></video>
+        <div class="videos__info">
+          <h3 class="videos__title">Become A Travel Pro in One Easy Lesson</h3>
+          <p class="videos__owner">Todd Welch</p>
+        </div>
+      </li>
+      <li class="videos__item">
+        <video class="videos__source" src="#"></video>
+        <div class="videos__info">
+          <h3 class="videos__title">Become A Travel Pro in One Easy Lesson</h3>
+          <p class="videos__owner">Todd Welch</p>
+        </div>
+      </li>
+      <li class="videos__item">
+        <video class="videos__source" src="#"></video>
+        <div class="videos__info">
+          <h3 class="videos__title">Become A Travel Pro in One Easy Lesson</h3>
+          <p class="videos__owner">Todd Welch</p>
+        </div>
+      </li>
+      <li class="videos__item">
+        <video class="videos__source" src="#"></video>
+        <div class="videos__info">
+          <h3 class="videos__title">Become A Travel Pro in One Easy Lesson</h3>
+          <p class="videos__owner">Todd Welch</p>
         </div>
       </li>
     </ul>
